<resources>
    <string name="app_name">Xplocity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Create an account</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_reset_password">Reset password</string>
    <string name="action_send_reset_pwd_email">Send mail</string>
    <string name="prompt_password_reset_token">Password reset key</string>
    <string name="action_forgot_password">Forgot password?</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_empty_password">Password is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_route_view">Map</string>


    <string name='preference_file_key' translatable="false">Xplocity.Storage</string>
    <string name='route_id_key' translatable="false">route_id</string>
    <string name="route_key" translatable="false">route</string>
    <string name='notification_channel_id' translatable="false">xplocity_channel_01</string>
    <string name="broadcast_position_changed" translatable="false">Xplocity.broadcast.positionChanged</string>
    <string name="broadcast_location_reached" translatable="false">Xplocity.broadcast.locationReached</string>
    <string name="broadcast_location_circle_reached" translatable="false">Xplocity.broadcast.locationCircleReached</string>


    <!-- Error messages -->
    <string name='error_location_perm_request_failed'>Failed to acquire location permissions</string>
    <string name='error_write_external_storage_perm_request_failed'>Failed to acquire write to external storage permissions</string>

    <!-- Permission messages -->
    <string name='permission_request_header'>Xplocity needs some permissions:</string>
    <string name='info_location_perm_request_head'>Location permission request</string>
    <string name='info_location_perm_request_text'>- Location tracking to track your route</string>
    <string name='info_write_external_storage_perm_request_head'>External storage permission request</string>
    <string name='info_write_external_storage_perm_request_text'>- Writing to storage to cache maps</string>


    <!-- Log level -->
    <string name='log_level' translatable="false">verbose</string>

    <!-- Global map strings -->
    <string name='location_circle_title'>Visit this area to reveal hidden location</string>


    <!-- Route saving screen -->
    <string name='unseen_locations_text_1'>And another</string>
    <string name='unseen_locations_text_2'>locations have remained in secret.</string>
    <string name='unseen_locations_text_3'>Come back for them next time!</string>


    <!-- Measures -->
    <string name='km'>km</string>
    <string name="n_km">%1$s km</string>
    <string name="n_km_h">%1$s km/h</string>
    <string name="n_h">%1$s h</string>

    <string name="hour_short">h</string>
    <string name="minute_short">m</string>


    <string name="if_you_already_have_an_account">If you already have an account:</string>
    <string name="distance">distance</string>
    <string name="duration">duration</string>
    <string name="avg_speed">avg speed</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="how_do_you_move">How do you move</string>
    <string name="desired_travel_time">Desired travel time</string>
    <string name="what_are_you_interested_in">What are you interested in</string>
    <string name="get_route">Get route</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_found_all_locations_on_the_current_route_would_you_like_to_finish_tracking_and_save_the_route">You have found all locations on the current route. Would you like to finish tracking and save the route?</string>
    <string name="finish_and_save_route">Yes, finish and save route</string>
    <string name="continue_route">Continue route</string>

    <string name="loading_routes">Loading routes</string>

    <string name="save_route">Save route</string>
    <string name="you_found_all_locations_of_this_route">You found all locations of this route!</string>
    <string name="welcome_to_xplocity">Welcome to Xplocity</string>
    <string name="explore_beautiful_hidden_places_of_cities">Explore beautiful hidden places of cities</string>
    <string name="start_your_first_route">Start your first route</string>
    <string name="share_route">Share route</string>
    <string name="share_route_tip">Press button to share your route. You will receive unique ID of the route to share with others.</string>
    <string name="share">Share</string>
    <string name="get_shared_route">Get shared route</string>
    <string name="report_a_new_location">Report a new location</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>

    <string name="report_location_message">Message</string>
    <string name="send">Send</string>
    <string name="get_shared_route_hint">If you received ID of shared route, paste it below.</string>
    <string name="report_location_title">Set marker to the location</string>
    <string name="location_name">Location name</string>
    <string name="location_description">Location description</string>
    <string name="report_new_location">Report location</string>
    <string name="cancel">Cancel</string>
    <string name="report_location">Report</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out?</string>
    <string name="delete_route">Delete</string>
    <string name="confirm_delete_route">Are you sure you want to delete this route?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_cancel_route">Unsaved route will be lost. Do you want to continue?</string>
    <string name="explored">Explored</string>
    <string name="left">Left</string>
    <string name="show_the_closest_location">Show the closest location</string>
    <string name="error_network_error">Couldn\'t connect to the Internet. Please check your connection</string>
    <string name="error_credentials">Credential error. Please login again.</string>
    <string name="new_password">New password</string>
    <string name="password_reset_tip_text">Password reset key was sent to your email address. Please, enter it to the field below. Also enter new password for your account.</string>
    <string name="action_set_new_password">Save new password</string>
    <string name="toast_new_password">New password was saved.</string>


</resources>
