<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miShareRoute"
        android:title="@string/share_route"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/miGetSharedRoute"
        android:title="@string/get_shared_route"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_get_app_white_24dp"
        android:onClick="onGetSharedRoute"
        android:visible="false"/>
    <item
        android:id="@+id/miReportNewLocation"
        android:title="@string/report_a_new_location"
        app:showAsAction="collapseActionView"
        android:onClick="onReportNewLocation"/>
    <item
        android:id="@+id/miProfile"
        android:title="@string/profile"
        app:showAsAction="collapseActionView|withText"/>
    <item
        android:id="@+id/miSignOut"
        android:title="@string/sign_out"
        app:showAsAction="collapseActionView|withText"
        android:onClick="onSignOut"/>
</menu>