<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_tip_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txt_password_reset_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_reset_token"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_set_new_password"
        style="@style/XplocityColoredButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="resetPassword"
        android:text="@string/action_set_new_password" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError"
        android:visibility="gone"
        android:textSize="18sp" />

</LinearLayout>