<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:id="@+id/bottom_sheet_page_locations_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="8dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/progress_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
  >

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/locations_explored_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/location_explored_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/location_explored_marker"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/locations_explored_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="142"
                        android:textColor="@color/place_autocomplete_search_text"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@+id/location_explored_icon"
                        app:layout_constraintLeft_toRightOf="@id/location_explored_icon"
                        app:layout_constraintTop_toTopOf="@+id/location_explored_icon" />
                </android.support.constraint.ConstraintLayout>


                <ProgressBar
                    android:id="@+id/location_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/progress_circle_background"
                    android:indeterminate="false"

                    android:max="100"
                    android:progress="78"
                    android:progressDrawable="@drawable/progress_circle_shape"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/locations_explored_percent_container"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="16dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/locations_explored_percent_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="76"
                            android:textStyle="bold"
                            android:textSize="28sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/locations_explored_percent_sign"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" %"
                            android:textSize="20sp"
                            app:layout_constraintStart_toEndOf="@+id/locations_explored_percent_number"
                            app:layout_constraintTop_toTopOf="@+id/locations_explored_percent_number"
                            app:layout_constraintBottom_toBottomOf="@+id/locations_explored_percent_number"/>

                        <TextView
                            android:id="@+id/locations_explored_percent_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/explored"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/locations_explored_percent_number" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/locations_left_count_container"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="16dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/locations_left_count_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/locations_left_count_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/left"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/locations_left_count_number" />
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray300" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">

                    <ImageButton
                        android:id="@+id/btn_show_closest_location_secondary"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/transparent"
                        android:scaleType="fitStart"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/seekbar_thumb" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/show_the_closest_location"
                        android:scrollHorizontally="false"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_show_closest_location_secondary"
                        app:layout_constraintTop_toTopOf="parent" />


                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_locations_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</LinearLayout>